Description: RedHat Update kernel for RHEL5
Details    : Modify the kernel config file more closer RHEL5.

Severity   : normal
Bugzilla   : 13360
Description: Build failure against Centos5 (RHEL5)
Details    : Define PAGE_SIZE when it isn't present.

Severity   : minor
Bugzilla   : 13363
Description: test_7 on sanity-quota.sh can't be used on separate machines
Details    : add facet to handle it

--------------------------------------------------------------------------------

2007-08-27         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.2
       * Support for kernels:
        2.6.5-7.286 (SLES 9),
        2.6.9-55.0.2.EL (RHEL 4),
        2.6.16.46-0.14 (SLES 10),
        2.6.18-8.1.8.el5 (RHEL 5),
        2.6.18.8 vanilla (kernel.org)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Due to recently discovered recovery problems, we do not recommend
        using patchless RHEL 4 clients with this or any earlier release.
       * Recommended e2fsprogs version: 1.39.cfs8
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.

Severity   : minor
Bugzilla   : 13147
Description: block reactivating mgc import until all deactivates complete
Details    : Fix race when failing back MDT/MGS to itself (testing)

Severity   : enhancement
Bugzilla   : 12786
Description: lfs setstripe enhancement
Details    : Make lfs setstripe understand 'k', 'm' and 'g' for stripe size.

Severity   : normal
Frequency  : mds/oss recovery 
Bugzilla   : 10800
Description: llog ctxt is refrenced after it has been freed. 
Details    : llog ctxt refcount was added to avoide the race between ctxt free
	     and llog recovery process. Each llog user must hold ctxt refcount
	     before it access the llog. And the llog ctxt can only be freed
	     when its refcount is zero.

Severity   : enhancement
Bugzilla   : 12211